logs/eggNOGfails/eggNOG_491789.log
Query name: /vortexfs1/omics/env-bio/collaboration/genome-streamlining/data/Proteins/AAA015-M09_proteins.faa
 Outfile: /vortexfs1/omics/env-bio/collaboration/genome-streamlining/data/eggNOGged/AAA015-M09_proteins_maNOG.txt

  File "/vortexfs1/home/ngermolus/eggnog-mapper/emapper.py", line 64
    print dbpath
               ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(dbpath)?
